# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import recordingsRouter from "./recordings";
 import performersRouter from "./performers";
 import tagsRouter from "./tags";
 import statsRouter from "./stats";
+import reactionsRouter from "./reactions";
+import commentsRouter from "./comments";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(recordingsRouter);
 router.use(performersRouter);
 router.use(tagsRouter);
 router.use(statsRouter);
+router.use(reactionsRouter);
+router.use(commentsRouter);
 
 export default router;
